--- a/html/level-mudah.html
+++ b/html/level-mudah.html
@@ -456,7 +456,7 @@
             <div class="modal-content rounded-4 shadow-lg">
                 <div class="modal-header bg-gradient-danger text-white d-flex align-items-center">
                     <span class="material-icons fs-1 me-2">close</span>
-                    <h5 class="modal-title flex-grow-1 fw-bold">Game Over</h5>
+                    <h5 class="modal-title flex-grow-1 fw-bold">Permainan Berakhir</h5>
                 </div>
                 <div class="modal-body text-center">
                     <h2 class="fw-bold" style="color:#c92a2a;">Yah, kesempatan habis!</h2>
