--- a/html/tentang-perkalian.html
+++ b/html/tentang-perkalian.html
@@ -215,10 +215,16 @@
 
     <div class="section-title">Apa Itu Perkalian?</div>
     <div class="materi-text">
-      <b>Perkalian</b> adalah operasi matematika dasar yang merupakan bentuk penjumlahan berulang.<br>
+      <b>Perkalian</b> adalah operasi matematika dasar yang digunakan untuk menghitung penjumlahan berulang dari sebuah bilangan, khususnya untuk <b>bilangan cacah</b> (yaitu 0, 1, 2, 3, dan seterusnya, tanpa bilangan negatif atau pecahan).<br><br>
       Jika kamu melihat <b>4 × 3</b>, artinya kamu menjumlahkan angka 4 sebanyak 3 kali:<br>
       <b>4 + 4 + 4 = 12</b>.<br>
-      <b>Simbol perkalian</b> biasanya menggunakan tanda "<b>&times;</b>" atau kadang juga titik ".".
+      <b>Simbol perkalian</b> biasanya menggunakan tanda "<b>&times;</b>" atau kadang juga titik ".".<br><br>
+      <i>Catatan:</i> Pada game ini, soal-soal perkalian hanya menggunakan bilangan cacah. Jadi, semua hasil perkalian juga bilangan cacah (bukan negatif atau pecahan).
+    </div>
+
+    <div class="section-title">Ruang Lingkup Materi Perkalian di Game Ini</div>
+    <div class="materi-text">
+      Di game ini, kamu hanya akan belajar dan berlatih <b>perkalian bilangan cacah</b>, yaitu bilangan bulat non-negatif (0, 1, 2, 3, ...). Tidak ada soal bilangan negatif, pecahan, atau desimal. Semua contoh dan latihan difokuskan untuk memudahkan pemahaman dasar perkalian bilangan cacah.
     </div>
 
     <div class="section-title">Sifat-Sifat Perkalian</div>
@@ -358,7 +364,7 @@
       </table>
     </div>
 
-    <div class="referensi-box">
+    <!-- <div class="referensi-box">
       <b>Referensi:</b>
       <ol style="margin:7px 0 0 19px; padding-left:0;">
         <li>
@@ -376,7 +382,7 @@
         </li>
       </ol>
     </div>
-  </div>
+  </div> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
