--- a/index.html
+++ b/index.html
@@ -1,59 +1,177 @@
-<!DOCTYPE html>
-<html lang="id">
+TY  - BOOK
+AU  - Krug, Steve
+TI  - Don't Make Me Think: A Common Sense Approach to Web Usability
+PB  - New Riders
+PY  - 2014
+SN  - 9780321965516
+ER  -
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KaliKu - Loading</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="icon" href="../asset/image/kaliku.png" type="image/png">
+TY  - BOOK
+AU  - Shneiderman, Ben
+AU  - Plaisant, Catherine
+TI  - Designing the User Interface: Strategies for Effective Human-Computer Interaction
+PB  - Pearson
+PY  - 2017
+SN  - 9780134380384
+ER  -
 
-  <style>
-    body {
-      background-color: #fff8c2;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
+TY  - BOOK
+AU  - Berners-Lee, Tim
+TI  - Weaving the Web: The Original Design and Ultimate Destiny of the World Wide Web by its Inventor
+PB  - HarperCollins
+PY  - 1999
+SN  - 9780062515872
+ER  -
 
-    .loader {
-      font-weight: bold;
-      font-family: monospace;
-      font-size: 30px;
-      color: white;
-      padding: 10px 20px;
-      background: linear-gradient(90deg, #a66232 50%, transparent 0) right / 200% 100%;
-      animation: l21 2s infinite linear;
-      border-radius: 10px;
-    }
+TY  - JOUR
+AU  - Zainuddin, Zamzami
+AU  - Perera, Carolyn J.
+AU  - Johari, Abdullah
+TI  - Supporting Students’ Motivation in Online Learning Environments: Challenges and Opportunities
+JO  - Turkish Online Journal of Distance Education
+PY  - 2020
+VL  - 21
+IS  - 3
+SP  - 1
+EP  - 18
+SN  - 1302-6488
+UR  - https://dergipark.org.tr/en/download/article-file/1217887
+ER  -
 
-    @keyframes l21 {
-      100% {
-        background-position: left;
-      }
-    }
-  </style>
-</head>
+TY  - JOUR
+AU  - Pratama, Riza Akbar
+TI  - Pengembangan Media Pembelajaran Berbasis Web pada Materi Matriks
+JO  - Jurnal Pendidikan Matematika
+PY  - 2020
+VL  - 8
+IS  - 2
+SP  - 120
+EP  - 128
+SN  - 2338-1183
+DO  - 10.22342/jpm.8.2.7506.120-128
+UR  - https://journal.unnes.ac.id/sju/index.php/jpm/article/view/7506
+ER  -
 
-<body>
-  <div class="loader">Loading...</div>
+TY  - ELEC
+TI  - Bootstrap 5 Documentation
+UR  - https://getbootstrap.com/docs/5.0/getting-started/introduction/
+PY  - 2024
+ER  -
 
-  <script>
-    // Cek apakah user sudah login
-    setTimeout(() => {
-      const playerName = localStorage.getItem("game_username");
-      if (playerName) {
-        // Jika sudah login, arahkan ke halaman utama
-        window.location.href = "html/halaman-utama.html";
-      } else {
-        // Jika belum login, arahkan ke halaman login
-        window.location.href = "login.html";
-      }
-    }, 5000);
-  </script>
-</body>
+TY  - BOOK
+AU  - Harris, Andy
+TI  - HTML, CSS, and JavaScript All in One
+PB  - Wiley
+PY  - 2018
+SN  - 9781119473923
+ER  -
 
-</html>
+TY  - BOOK
+AU  - Nugroho, Adi
+TI  - Pemrograman Web Dinamis dengan PHP & MySQL
+PB  - Andi
+PY  - 2018
+SN  - 9789792926361
+ER  -
+
+TY  - BOOK
+AU  - Munir
+TI  - Pembelajaran Digital
+PB  - Alfabeta
+PY  - 2021
+SN  - 9786232282556
+ER  -
+
+TY  - JOUR
+AU  - Febrian, Dian
+AU  - Setyosari, Punaji
+TI  - Efektivitas Penggunaan Media Pembelajaran Berbasis Web terhadap Hasil Belajar Siswa
+JO  - Jurnal Pendidikan: Teori, Penelitian, dan Pengembangan
+PY  - 2021
+VL  - 6
+IS  - 1
+SP  - 115
+EP  - 120
+SN  - 2502-471X
+DO  - 10.17977/jptpp.v6i1.14232
+UR  - https://journal.unesa.ac.id/index.php/jptpp/article/view/14232
+ER  -
+
+TY  - JOUR
+AU  - Sun, Pei-Ling
+AU  - Tsai, Ray
+TI  - A review of literature on web-based learning environments in higher education
+JO  - Educational Technology & Society
+PY  - 2019
+VL  - 22
+IS  - 2
+SP  - 40
+EP  - 51
+SN  - 1436-4522
+UR  - https://www.jstor.org/stable/26896734
+ER  -
+
+TY  - JOUR
+AU  - Ramadhan, Amirulloh
+AU  - Risnasari, Novita
+TI  - Pengembangan Game Edukasi Matematika (Operasi Bilangan Pecahan) Berbasis Android untuk Sekolah Dasar
+JO  - Jurnal Ilmiah Pendidikan Matematika
+PY  - 2019
+VL  - 8
+IS  - 1
+SP  - 29
+EP  - 38
+SN  - 2502-2486
+DO  - 10.26877/jipmat.v8i1.3552
+UR  - https://jurnal.ustjogja.ac.id/index.php/jipmat/article/view/3552
+ER  -
+
+TY  - JOUR
+AU  - Muslimah, Nur
+AU  - Rahmawati, Dian
+TI  - Pengembangan Media Game Edukasi Si Putar Berbasis Android pada Materi Perkalian sebagai Media Belajar di Sekolah Dasar
+JO  - Jurnal Ilmiah Pendidikan Dasar
+PY  - 2023
+VL  - 10
+IS  - 1
+SP  - 59
+EP  - 68
+SN  - 2477-5975
+DO  - 10.30659/pendas.10.1.59-68
+UR  - https://journal.unnes.ac.id/sju/index.php/pendas/article/view/61210
+ER  -
+
+TY  - ELEC
+TI  - W3C Standards Overview
+UR  - https://www.w3.org/standards/
+PY  - 2023
+ER  -
+
+TY  - JOUR
+AU  - Hartnett, Maggie
+AU  - St. George, Alison
+AU  - Dron, Jon
+TI  - Examining motivation in online distance learning environments: Complex, multifaceted, and situation-dependent
+JO  - International Review of Research in Open and Distributed Learning
+PY  - 2019
+VL  - 12
+IS  - 6
+SP  - 20
+EP  - 38
+SN  - 1492-3831
+UR  - https://www.irrodl.org/index.php/irrodl/article/view/1030
+ER  -
+
+TY  - JOUR
+AU  - Ananta, Dwi
+AU  - Mubarok, M. R.
+TI  - Pengembangan Media Pembelajaran Matematika Berbasis Game Edukasi pada Materi Operasi Perkalian
+JO  - Jurnal Pendidikan: Teori, Penelitian, dan Pengembangan
+PY  - 2024
+VL  - 9
+IS  - 2
+SP  - 250
+EP  - 260
+SN  - 2502-471X
+UR  - https://journal.unesa.ac.id/index.php/jptpp/article/view/41899
+ER  -
