--- a/html/tentang-perkalian.html
+++ b/html/tentang-perkalian.html
@@ -37,6 +37,7 @@
         opacity: 0;
         transform: translateY(25px);
       }
+
       to {
         opacity: 1;
         transform: translateY(0);
@@ -193,22 +194,27 @@
         padding: 10px 1vw 12px 1vw;
         margin: 8px auto 18vw auto;
       }
+
       .judul {
         font-size: 1.17rem;
       }
+
       .subjudul {
         font-size: 1em;
         padding: 11px 6px 10px 6px;
       }
+
       .section-title {
         font-size: 1.03rem;
         padding-left: 8px;
       }
+
       .materi-section {
         padding: 15px 6px 12px 10px;
         margin-bottom: 23px;
         border-radius: 10px;
       }
+
       .footer-info {
         font-size: .90em;
       }
@@ -230,11 +236,13 @@
     <div class="materi-section">
       <div class="section-title">Definisi Perkalian</div>
       <div class="materi-text">
-         <b>Perkalian</b> merupakan cara yang digunakan untuk memperoleh hasil penjumlahan berulang dari bilangan yang sama secara lebih cepat dan praktis.<br><br>
-    
+        <b>Perkalian</b> merupakan cara yang digunakan untuk memperoleh hasil penjumlahan berulang dari bilangan yang
+        sama secara lebih cepat dan praktis.<br><br>
+
         <i>Contoh:</i> <b>4 × 3 = 3 + 3 + 3 + 3 = 12</b>.<br>
-        
-        <br>Dengan perkalian, kita bisa mengetahui jumlah total dengan hanya satu operasi, tanpa perlu menulis penjumlahan panjang..
+
+        <br>Dengan perkalian, kita bisa mengetahui jumlah total dengan hanya satu operasi, tanpa perlu menulis
+        penjumlahan panjang..
       </div>
     </div>
     <hr class="section-divider" />
@@ -242,9 +250,11 @@
     <div class="materi-section">
       <div class="section-title">Model Perkalian pada Bilangan Cacah</div>
       <div class="materi-text">
-        Model penjumlahan berulang <b>hanya berlaku pada bilangan cacah</b>. 
-        Pada bilangan cacah (<b>0, 1, 2, 3, ...</b>), <b>a × b</b> artinya menambah angka <b>b</b> sebanyak <b>a</b> kali.<br>
-        Jika kamu melihat 5 × 2, artinya 2 + 2 + 2 + 2 + 2 = 10. Pada jenis bilangan lain seperti pecahan atau bilangan negatif, model ini tidak digunakan.
+        Model penjumlahan berulang <b>hanya berlaku pada bilangan cacah</b>.
+        Pada bilangan cacah (<b>0, 1, 2, 3, ...</b>), <b>a × b</b> artinya menambah angka <b>b</b> sebanyak <b>a</b>
+        kali.<br>
+        Jika kamu melihat 5 × 2, artinya 2 + 2 + 2 + 2 + 2 = 10. Pada jenis bilangan lain seperti pecahan atau bilangan
+        negatif, model ini tidak digunakan.
       </div>
     </div>
     <hr class="section-divider" />
@@ -276,11 +286,13 @@
             </tr>
             <tr>
               <th><span class="material-icons">all_inclusive</span>Asosiatif</th>
-              <td>Pemilihan kelompok bisa diubah: <b>(a × b) × c = a × (b × c)</b>.<br>Contoh: (2 × 3) × 4 = 2 × (3 × 4) = 24</td>
+              <td>Pemilihan kelompok bisa diubah: <b>(a × b) × c = a × (b × c)</b>.<br>Contoh: (2 × 3) × 4 = 2 × (3 × 4)
+                = 24</td>
             </tr>
             <tr>
               <th><span class="material-icons">add_circle_outline</span>Distributif</th>
-              <td>Perkalian bisa didistribusikan ke penjumlahan: <b>a × (b + c) = (a × b) + (a × c)</b>.<br>Contoh: 2 × (3 + 4) = (2 × 3) + (2 × 4) = 14</td>
+              <td>Perkalian bisa didistribusikan ke penjumlahan: <b>a × (b + c) = (a × b) + (a × c)</b>.<br>Contoh: 2 ×
+                (3 + 4) = (2 × 3) + (2 × 4) = 14</td>
             </tr>
             <tr>
               <th><span class="material-icons">exposure_plus_1</span>Identitas</th>
@@ -300,7 +312,8 @@
     <div class="materi-section">
       <div class="section-title">Perkalian 1 Digit × 2 Digit</div>
       <div class="materi-text">
-        Untuk menghitung 1 digit × 2 digit, misalnya <b>7 × 13</b>, kamu bisa memecah angka dua digit tersebut menjadi puluhan dan satuan, lalu mengalikan masing-masing dengan angka 1 digit.
+        Untuk menghitung 1 digit × 2 digit, misalnya <b>7 × 13</b>, kamu bisa memecah angka dua digit tersebut menjadi
+        puluhan dan satuan, lalu mengalikan masing-masing dengan angka 1 digit.
         <br><br>
         <b>Contoh:</b>
         <ul style="margin-top:6px; margin-bottom:6px;">
@@ -310,7 +323,8 @@
           <li>Jadi, 7 × 13 = 70 + 21 = <b>91</b></li>
         </ul>
         <div style="margin:10px 0 2px 0; text-align:center;">
-          <span style="display:inline-block;background:#ffe6b0;padding:11px 18px 8px 18px;border-radius:13px;box-shadow:0 1.5px 7px #ffde8e80;">
+          <span
+            style="display:inline-block;background:#ffe6b0;padding:11px 18px 8px 18px;border-radius:13px;box-shadow:0 1.5px 7px #ffde8e80;">
             <span style="color:#a77a14;font-size:.99em;">
               <b>7 × 13 = (7 × 10) + (7 × 3) = 70 + 21 = 91</b>
             </span>
@@ -326,7 +340,8 @@
     <div class="materi-section">
       <div class="section-title">Perkalian 2 Digit × 2 Digit (Distributif)</div>
       <div class="materi-text">
-        Untuk menghitung perkalian dua digit × dua digit, misal <b>34 × 12</b>, gunakan teknik uraikan ke puluhan dan satuan, lalu kalikan semua kemungkinan, dan jumlahkan hasilnya.
+        Untuk menghitung perkalian dua digit × dua digit, misal <b>34 × 12</b>, gunakan teknik uraikan ke puluhan dan
+        satuan, lalu kalikan semua kemungkinan, dan jumlahkan hasilnya.
         <br><br>
         <b>Langkah 1:</b> Uraikan masing-masing bilangan:<br>
         34 = 30 + 4 &nbsp;&nbsp;&nbsp; 12 = 10 + 2
@@ -346,11 +361,94 @@
 
     <hr class="section-divider" />
 
+    <!-- Perkalian 2 digit × 1 digit bersusun (dengan visual angka simpan/carry) -->
+    <div class="materi-section">
+      <div class="section-title">Perkalian 2 Digit × 1 Digit dengan Metode Bersusun</div>
+      <div class="materi-text">
+        Metode bersusun juga digunakan untuk menghitung perkalian 2 digit × 1 digit, dengan langkah-langkah yang mirip
+        seperti pada 2 digit × 2 digit.<br><br>
+        <b>Contoh: 47 × 6</b>
+        <div style="display: flex; justify-content: center; margin:18px 0;">
+          <table style="border-collapse:collapse;font-size:1.13em;">
+            <!-- Simpanan di atas -->
+            <tr>
+              <td style="border:none;"></td>
+              <td style="border:none;text-align:right;">
+                <span style="color:#ff4500;font-weight:bold;font-size:1.1em;">
+                  <span style="border-bottom:1.5px dashed #ff4500;">4</span>
+                  <span style="font-size:.9em;color:#c47b00;">&nbsp;&#8595;</span>
+                </span>
+              </td>
+            </tr>
+            <!-- Angka utama -->
+            <tr>
+              <td style="border:none;"></td>
+              <td style="border:none;text-align:right;"><b>47</b></td>
+            </tr>
+            <tr>
+              <td style="border:none;text-align:right;">×</td>
+              <td style="border:none;text-align:right;"><b>6</b></td>
+            </tr>
+            <tr>
+              <td colspan="2" style="border-bottom:2px solid #e0b343;"> </td>
+            </tr>
+            <tr>
+              <td style="color:#e19904;">6 × 7 =</td>
+              <td style="text-align:right;color:#e19904;">
+                <b>42</b>
+                <span style="font-size:.98em;color:#ff4500;">(tulis 2,<br> simpan 4)</span>
+              </td>
+            </tr>
+            <tr>
+              <td style="color:#e19904;">6 × 4 =</td>
+              <td style="text-align:right;color:#e19904;">
+                <b>24 + 4</b> <span style="font-size:.98em;color:#ff4500;">= 28</span>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2" style="border-bottom:2px solid #e0b343;"> </td>
+            </tr>
+            <tr>
+              <td style="text-align:right;"><b>Hasil</b></td>
+              <td style="text-align:right;"><b>282</b></td>
+            </tr>
+          </table>
+        </div>
+        <b>Langkah-langkahnya:</b>
+        <ol style="margin-top:10px;">
+          <li>
+            <b>Kalikan angka satuan bawah (6) dengan angka satuan atas (7):</b><br>
+            <span style="background:#fff6db;padding:2px 6px 2px 6px;border-radius:7px;">
+              6 × 7 = 42. <b>Tulis 2 di bawah</b>, <span style="color:#ff4500;"><b>simpan 4 di atas angka 4</b></span>.
+            </span>
+          </li>
+          <li>
+            <b>Kalikan angka satuan bawah (6) dengan angka puluhan atas (4), lalu tambahkan angka simpanan:</b><br>
+            <span style="background:#fff6db;padding:2px 6px 2px 6px;border-radius:7px;">
+              6 × 4 = 24. <b>Tambahkan angka simpanan 4</b> (<span style="color:#ff4500;"><b>24 + 4 = 28</b></span>).
+            </span>
+          </li>
+          <li>
+            <b>Gabungkan hasilnya:</b> <b>282</b>
+          </li>
+        </ol>
+        <div style="margin:9px 0 2px 0;color:#ad7d12;font-size:.99em;">
+          <i>
+            Perhatikan: <b>Angka simpanan 4 ditulis kecil di atas angka puluhan</b> agar mudah diingat dan ditambahkan
+            di langkah berikutnya.
+          </i>
+        </div>
+      </div>
+    </div>
+
+    <hr class="section-divider" />
+
     <!-- Perkalian 2 digit × 2 digit bersusun -->
     <div class="materi-section">
       <div class="section-title">Perkalian 2 Digit × 2 Digit dengan Metode Bersusun</div>
       <div class="materi-text">
-        Metode bersusun atau “cara porogapit” adalah cara cepat mengalikan 2 digit × 2 digit dengan menuliskan susunan angka secara vertikal.<br><br>
+        Metode bersusun atau “cara porogapit” adalah cara cepat mengalikan 2 digit × 2 digit dengan menuliskan susunan
+        angka secara vertikal.<br><br>
         <b>Contoh: 34 × 12</b><br>
         <div style="display: flex; justify-content: center; margin:18px 0;">
           <table style="border-collapse:collapse;font-size:1.13em;">
@@ -371,7 +469,8 @@
             </tr>
             <tr>
               <td style="color:#e19904;">1 × 34 =</td>
-              <td style="text-align:right;color:#e19904;"><b>34</b><span style="opacity:.6;font-size:.92em;">0</span></td>
+              <td style="text-align:right;color:#e19904;"><b>34</b><span style="opacity:.6;font-size:.92em;">0</span>
+              </td>
             </tr>
             <tr>
               <td colspan="2" style="border-bottom:2px solid #e0b343;"> </td>
@@ -385,12 +484,14 @@
         <b>Langkah-langkahnya:</b>
         <ol style="margin-top:10px;">
           <li>Kali angka satuan bawah (2) dengan 34 &rarr; <b>2 × 34 = 68</b></li>
-          <li>Kali angka puluhan bawah (1) dengan 34, tambahkan nol di belakang (karena puluhan) &rarr; <b>1 × 34 = 34, jadi 340</b></li>
+          <li>Kali angka puluhan bawah (1) dengan 34, tambahkan nol di belakang (karena puluhan) &rarr; <b>1 × 34 = 34,
+              jadi 340</b></li>
           <li>Jumlahkan hasilnya: <b>68 + 340 = 408</b></li>
         </ol>
         <div style="margin:13px 0 2px 0;color:#ad7d12;font-size:.99em;">
           Jadi, <b>34 × 12 = 408</b>.<br>
-          <i>Catatan: Metode ini bisa juga dipakai untuk angka yang lebih besar, tinggal tambahkan baris sesuai digitnya.</i>
+          <i>Catatan: Metode ini bisa juga dipakai untuk angka yang lebih besar, tinggal tambahkan baris sesuai
+            digitnya.</i>
         </div>
       </div>
     </div>
@@ -415,7 +516,8 @@
     <div class="materi-section">
       <div class="section-title">Tabel Perkalian 1–10</div>
       <div style="overflow-x:auto;">
-        <table style="background:#fffde8;border-radius:12px;border:1.7px solid #ffe082;box-shadow:0 1px 6px #ffe08260;font-size:1.07em;text-align:center;min-width:390px;margin-bottom:6px;">
+        <table
+          style="background:#fffde8;border-radius:12px;border:1.7px solid #ffe082;box-shadow:0 1px 6px #ffe08260;font-size:1.07em;text-align:center;min-width:390px;margin-bottom:6px;">
           <thead>
             <tr style="background:#ffecb3;">
               <th style="padding:6px 9px;">×</th>
@@ -432,21 +534,142 @@
             </tr>
           </thead>
           <tbody>
-            <tr><th style="background:#ffecb3;">1</th><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td></tr>
-            <tr><th style="background:#ffecb3;">2</th><td>2</td><td>4</td><td>6</td><td>8</td><td>10</td><td>12</td><td>14</td><td>16</td><td>18</td><td>20</td></tr>
-            <tr><th style="background:#ffecb3;">3</th><td>3</td><td>6</td><td>9</td><td>12</td><td>15</td><td>18</td><td>21</td><td>24</td><td>27</td><td>30</td></tr>
-            <tr><th style="background:#ffecb3;">4</th><td>4</td><td>8</td><td>12</td><td>16</td><td>20</td><td>24</td><td>28</td><td>32</td><td>36</td><td>40</td></tr>
-            <tr><th style="background:#ffecb3;">5</th><td>5</td><td>10</td><td>15</td><td>20</td><td>25</td><td>30</td><td>35</td><td>40</td><td>45</td><td>50</td></tr>
-            <tr><th style="background:#ffecb3;">6</th><td>6</td><td>12</td><td>18</td><td>24</td><td>30</td><td>36</td><td>42</td><td>48</td><td>54</td><td>60</td></tr>
-            <tr><th style="background:#ffecb3;">7</th><td>7</td><td>14</td><td>21</td><td>28</td><td>35</td><td>42</td><td>49</td><td>56</td><td>63</td><td>70</td></tr>
-            <tr><th style="background:#ffecb3;">8</th><td>8</td><td>16</td><td>24</td><td>32</td><td>40</td><td>48</td><td>56</td><td>64</td><td>72</td><td>80</td></tr>
-            <tr><th style="background:#ffecb3;">9</th><td>9</td><td>18</td><td>27</td><td>36</td><td>45</td><td>54</td><td>63</td><td>72</td><td>81</td><td>90</td></tr>
-            <tr><th style="background:#ffecb3;">10</th><td>10</td><td>20</td><td>30</td><td>40</td><td>50</td><td>60</td><td>70</td><td>80</td><td>90</td><td>100</td></tr>
+            <tr>
+              <th style="background:#ffecb3;">1</th>
+              <td>1</td>
+              <td>2</td>
+              <td>3</td>
+              <td>4</td>
+              <td>5</td>
+              <td>6</td>
+              <td>7</td>
+              <td>8</td>
+              <td>9</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <th style="background:#ffecb3;">2</th>
+              <td>2</td>
+              <td>4</td>
+              <td>6</td>
+              <td>8</td>
+              <td>10</td>
+              <td>12</td>
+              <td>14</td>
+              <td>16</td>
+              <td>18</td>
+              <td>20</td>
+            </tr>
+            <tr>
+              <th style="background:#ffecb3;">3</th>
+              <td>3</td>
+              <td>6</td>
+              <td>9</td>
+              <td>12</td>
+              <td>15</td>
+              <td>18</td>
+              <td>21</td>
+              <td>24</td>
+              <td>27</td>
+              <td>30</td>
+            </tr>
+            <tr>
+              <th style="background:#ffecb3;">4</th>
+              <td>4</td>
+              <td>8</td>
+              <td>12</td>
+              <td>16</td>
+              <td>20</td>
+              <td>24</td>
+              <td>28</td>
+              <td>32</td>
+              <td>36</td>
+              <td>40</td>
+            </tr>
+            <tr>
+              <th style="background:#ffecb3;">5</th>
+              <td>5</td>
+              <td>10</td>
+              <td>15</td>
+              <td>20</td>
+              <td>25</td>
+              <td>30</td>
+              <td>35</td>
+              <td>40</td>
+              <td>45</td>
+              <td>50</td>
+            </tr>
+            <tr>
+              <th style="background:#ffecb3;">6</th>
+              <td>6</td>
+              <td>12</td>
+              <td>18</td>
+              <td>24</td>
+              <td>30</td>
+              <td>36</td>
+              <td>42</td>
+              <td>48</td>
+              <td>54</td>
+              <td>60</td>
+            </tr>
+            <tr>
+              <th style="background:#ffecb3;">7</th>
+              <td>7</td>
+              <td>14</td>
+              <td>21</td>
+              <td>28</td>
+              <td>35</td>
+              <td>42</td>
+              <td>49</td>
+              <td>56</td>
+              <td>63</td>
+              <td>70</td>
+            </tr>
+            <tr>
+              <th style="background:#ffecb3;">8</th>
+              <td>8</td>
+              <td>16</td>
+              <td>24</td>
+              <td>32</td>
+              <td>40</td>
+              <td>48</td>
+              <td>56</td>
+              <td>64</td>
+              <td>72</td>
+              <td>80</td>
+            </tr>
+            <tr>
+              <th style="background:#ffecb3;">9</th>
+              <td>9</td>
+              <td>18</td>
+              <td>27</td>
+              <td>36</td>
+              <td>45</td>
+              <td>54</td>
+              <td>63</td>
+              <td>72</td>
+              <td>81</td>
+              <td>90</td>
+            </tr>
+            <tr>
+              <th style="background:#ffecb3;">10</th>
+              <td>10</td>
+              <td>20</td>
+              <td>30</td>
+              <td>40</td>
+              <td>50</td>
+              <td>60</td>
+              <td>70</td>
+              <td>80</td>
+              <td>90</td>
+              <td>100</td>
+            </tr>
           </tbody>
         </table>
       </div>
     </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
