--- a/html/tentang-perkalian.html
+++ b/html/tentang-perkalian.html
@@ -253,8 +253,8 @@
       <div class="materi-text">
         Berikut beberapa jenis bilangan yang sering digunakan dalam operasi perkalian:
         <ul style="margin-top:8px; margin-bottom:8px;">
-          <li><b>Bilangan Cacah (Whole Number) </b>: 0, 1, 2, 3, ...</li>
-          <li><b>Bilangan Bulat (Integer Number)</b>: ..., -3, -2, -1, 0, 1, 2, 3, ...</li>
+          <li><b>Bilangan Cacah </b>: 0, 1, 2, 3, ...</li>
+          <li><b>Bilangan Bulat</b>: ..., -3, -2, -1, 0, 1, 2, 3, ...</li>
           <li><b>Bilangan Pecahan</b>: ½, ⅓, ¾, dsb.</li>
           <li><b>Bilangan Desimal</b>: 2,5; 0,3; 7,85; dll.</li>
         </ul>
@@ -267,7 +267,7 @@
     <div class="materi-section">
       <div class="section-title">Model Perkalian pada Bilangan Cacah</div>
       <div class="materi-text">
-        Model penjumlahan berulang <b>hanya berlaku pada bilangan cacah</b> (Whole Number).
+        Model penjumlahan berulang <b>hanya berlaku pada bilangan cacah</b>.
         Pada bilangan cacah (<b>0, 1, 2, 3, ...</b>), <b>a × b</b> artinya menambah angka <b>b</b> sebanyak <b>a</b>
         kali.<br>
         Jika kamu melihat 5 × 2, artinya 2 + 2 + 2 + 2 + 2 = 10. Pada jenis bilangan lain seperti pecahan atau bilangan
