--- a/html/tentang-perkalian.html
+++ b/html/tentang-perkalian.html
@@ -314,9 +314,9 @@
 
     <!-- Perkalian 1 digit × 2 digit -->
     <div class="materi-section">
-      <div class="section-title">Perkalian 1 Digit × 2 Digit</div>
+      <div class="section-title">Perkalian Satuan × Puluhan</div>
       <div class="materi-text">
-        Untuk menghitung 1 digit × 2 digit, misalnya <b>7 × 13</b>, kamu bisa memecah angka dua digit tersebut menjadi
+        Untuk menghitung perkalian satuan × puluhan misalnya <b>7 × 13</b>, kamu bisa memecah angka tersebut menjadi
         puluhan dan satuan, lalu mengalikan masing-masing dengan angka 1 digit.
         <br><br>
         <b>Contoh:</b>
@@ -342,9 +342,9 @@
 
     <!-- Perkalian 2 digit × 2 digit distributif -->
     <div class="materi-section">
-      <div class="section-title">Perkalian 2 Digit × 2 Digit (Distributif)</div>
+      <div class="section-title">Perkalian Puluhan x Puluhan (Distributif)</div>
       <div class="materi-text">
-        Untuk menghitung perkalian dua digit × dua digit, misal <b>34 × 12</b>, gunakan teknik uraikan ke puluhan dan
+        Untuk menghitung perkalian puluhan × puluhan, misal <b>34 × 12</b>, gunakan teknik uraikan ke puluhan dan
         satuan, lalu kalikan semua kemungkinan, dan jumlahkan hasilnya.
         <br><br>
         <b>Langkah 1:</b> Uraikan masing-masing bilangan:<br>
@@ -367,10 +367,10 @@
 
     <!-- Perkalian 2 digit × 1 digit bersusun (dengan visual angka simpan/carry) -->
     <div class="materi-section">
-      <div class="section-title">Perkalian 2 Digit × 1 Digit dengan Metode Bersusun</div>
+      <div class="section-title">Perkalian Puluhan x Satuan dengan Metode Bersusun</div>
       <div class="materi-text">
-        Metode bersusun juga digunakan untuk menghitung perkalian 2 digit × 1 digit, dengan langkah-langkah yang mirip
-        seperti pada 2 digit × 2 digit.<br><br>
+        Metode bersusun juga digunakan untuk menghitung perkalian puluhan × satuan, dengan langkah-langkah yang mirip
+        seperti pada perkalian puluhan × puluhan.<br><br>
         <b>Contoh: 47 × 6</b>
         <div style="display: flex; justify-content: center; margin:18px 0;">
           <table style="border-collapse:collapse;font-size:1.13em;">
