--- a/html/level-sedang.html
+++ b/html/level-sedang.html
@@ -24,6 +24,7 @@
             padding: 30px;
             position: relative;
         }
+
         .container {
             max-width: 600px;
             background: #ffffff;
@@ -32,6 +33,7 @@
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             position: relative;
         }
+
         .icon-btn {
             background: none;
             border: none;
@@ -39,19 +41,23 @@
             cursor: pointer;
             color: #6e3012;
         }
+
         .icon-btn:hover {
             color: #ff9800;
         }
+
         h2 {
             font-weight: 700;
             color: #6e3012;
             margin-bottom: 20px;
         }
+
         #question {
             font-size: 22px;
             font-weight: bold;
             margin-bottom: 15px;
         }
+
         .dropzone {
             margin: 20px auto;
             padding: 15px;
@@ -63,6 +69,7 @@
             font-size: 16px;
             line-height: 40px;
         }
+
         .choices {
             display: flex;
             flex-wrap: wrap;
@@ -70,6 +77,7 @@
             margin-top: 20px;
             gap: 12px;
         }
+
         .choice {
             flex: 1 1 45%;
             min-width: 100px;
@@ -83,24 +91,29 @@
             box-shadow: 0 3px 0 rgba(0, 0, 0, 0.2);
             transition: transform 0.1s;
         }
+
         .choice:active {
             transform: scale(0.95);
         }
+
         .feedback,
         .hint,
         .lives {
             font-size: 18px;
             margin-top: 15px;
         }
+
         .lives {
             color: red;
         }
+
         .timer {
             font-size: 18px;
             font-weight: 600;
             color: #333;
             margin-top: 10px;
         }
+
         .bg-gradient-setting,
         .bg-gradient-info,
         .bg-gradient-success,
@@ -108,40 +121,50 @@
         .bg-gradient-danger {
             border-bottom: 3px solid #ffecb3;
         }
+
         .bg-gradient-setting {
             background: linear-gradient(90deg, #6e3012 60%, #ff9800 100%);
         }
+
         .bg-gradient-info {
             background: linear-gradient(90deg, #0d8bc2 60%, #7ed6ff 100%);
             border-bottom: 3px solid #b2ebf2;
         }
+
         .bg-gradient-success {
             background: linear-gradient(90deg, #37b24d 60%, #a0e294 100%);
             border-bottom: 3px solid #c1f2b0;
         }
+
         .bg-gradient-warning {
             background: linear-gradient(90deg, #ffc107 60%, #ffecb3 100%);
             border-bottom: 3px solid #fffde7;
         }
+
         .bg-gradient-danger {
             background: linear-gradient(90deg, #c92a2a 60%, #ff6b6b 100%);
             border-bottom: 3px solid #ffeaea;
         }
+
         .modal-content {
             border-radius: 1.5rem !important;
         }
+
         .modal-header .material-icons {
             font-size: 2.2rem;
         }
+
         .modal-header {
             border-top-left-radius: 1.5rem !important;
             border-top-right-radius: 1.5rem !important;
         }
+
         .modal-footer {
             border-bottom-left-radius: 1.5rem !important;
             border-bottom-right-radius: 1.5rem !important;
             border-top: none;
         }
+
         .setting-btn {
             border: none;
             background: #fffbe7;
@@ -156,6 +179,7 @@
             outline: none !important;
             text-decoration: none !important;
         }
+
         .setting-btn:hover,
         .setting-btn:focus {
             background: #ffe0b2;
@@ -163,10 +187,12 @@
             box-shadow: 0 4px 12px rgba(200, 130, 40, 0.15);
             text-decoration: none !important;
         }
+
         .setting-btn .material-icons {
             font-size: 1.7rem;
             vertical-align: middle;
         }
+
         .status-badge {
             min-width: 52px;
             font-size: 1rem;
@@ -177,6 +203,7 @@
             box-shadow: 0 0 4px #ffe082;
             letter-spacing: 1px;
         }
+
         #musikStatus.off,
         #soundStatus.off {
             background: #bdbdbd !important;
@@ -184,18 +211,22 @@
             border-color: #e0e0e0 !important;
             box-shadow: none !important;
         }
+
         .bantuan-limit {
             color: #d17c27;
             font-weight: bold;
             font-size: 1.03em;
         }
+
         @media (max-width: 576px) {
+
             .modal-content,
             .modal-header,
             .modal-footer {
                 border-radius: 1rem !important;
             }
         }
+
         .cara-hitung-box {
             box-shadow: 0 1px 8px #ffe0828c;
             background: #fffbe7;
@@ -206,9 +237,11 @@
             font-size: 1.07em;
             text-align: left;
         }
+
         .cara-hitung-box ol {
             padding-left: 18px;
         }
+
         .cara-hitung-box .step-badge {
             display: inline-block;
             background: #ffe082;
@@ -220,6 +253,17 @@
             text-align: center;
             font-weight: bold;
             margin-right: 5px;
+        }
+
+        select#musicGenre {
+            font-size: 14px !important;
+            padding: 0.5rem 1rem !important;
+        }
+
+        @media (max-width: 576px) {
+            select#musicGenre {
+                font-size: 13px !important;
+            }
         }
     </style>
 </head>
@@ -245,7 +289,7 @@
         <div id="question">Soal akan muncul di sini</div>
         <div class="timer" id="timer">
             <span class="material-icons" style="vertical-align:middle;font-size:20px;">timer</span>
-            Waktu: 10 detik
+            Waktu: 15 detik
         </div>
         <div class="dropzone" id="dropzone" ondrop="drop(event)" ondragover="event.preventDefault()">
             Tarik jawaban ke sini
@@ -268,40 +312,67 @@
                 <div class="modal-header bg-gradient-setting text-white d-flex align-items-center gap-2">
                     <span class="material-icons fs-1 me-2">settings</span>
                     <h5 class="modal-title flex-grow-1 fw-bold">Pengaturan</h5>
-                    <button class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                    <button class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body py-4 d-flex flex-column gap-3">
+
+                    <!-- Toggle Musik -->
                     <button class="setting-btn d-flex align-items-center justify-content-between"
                         onclick="toggleMusik()">
-                        <div>
-                            <span class="material-icons me-2">music_note</span>
-                            Musik
+                        <div class="d-flex align-items-center gap-2">
+                            <span class="material-icons">music_note</span>
+                            <span>Musik</span>
                         </div>
                         <span id="musikStatus" class="badge rounded-pill status-badge ms-2">ON</span>
                     </button>
+
+                    <!-- Toggle Sound -->
                     <button class="setting-btn d-flex align-items-center justify-content-between"
                         onclick="toggleSound()">
-                        <div>
-                            <span class="material-icons me-2">volume_up</span>
-                            Sound
+                        <div class="d-flex align-items-center gap-2">
+                            <span class="material-icons">volume_up</span>
+                            <span>Sound</span>
                         </div>
                         <span id="soundStatus" class="badge rounded-pill status-badge ms-2">ON</span>
                     </button>
-                    <div class="my-1">
-                        <hr>
+
+                    <!-- Pilihan Genre Musik -->
+                    <div class="d-flex flex-column gap-2">
+                        <label for="musicGenre" class="form-label fw-semibold d-flex align-items-center gap-2 mb-0">
+                            <span class="material-icons">library_music</span>
+                            <span>Pilih Genre Musik</span>
+                        </label>
+                        <select id="musicGenre" class="form-select rounded-3 shadow-sm" onchange="changeMusic()">
+                            <option value="musik-latar1.mp3">
+                                🎼 Klasik Santai
+                            </option>
+                            <option value="musik-latar2.mp3">
+                                🎮 Enerjik Game
+                            </option>
+                            <option value="musik-latar3.mp3">
+                                🌙 Tenang dan Fokus
+                            </option>
+                        </select>
                     </div>
-                    <a href="halaman-utama.html" class="setting-btn d-flex align-items-center">
-                        <span class="material-icons me-2">home</span> Beranda
+
+                    <!-- Navigasi -->
+                    <a href="halaman-utama.html" class="setting-btn d-flex align-items-center gap-2">
+                        <span class="material-icons">home</span>
+                        <span>Beranda</span>
                     </a>
-                    <button class="setting-btn d-flex align-items-center" onclick="ulangiPermainan()">
-                        <span class="material-icons me-2">restart_alt</span> Ulangi Permainan
+                    <button class="setting-btn d-flex align-items-center gap-2" onclick="ulangiPermainan()">
+                        <span class="material-icons">restart_alt</span>
+                        <span>Ulangi Permainan</span>
                     </button>
                 </div>
+
+                <!-- Footer -->
                 <div class="modal-footer bg-light py-2">
                     <button
                         class="btn btn-secondary w-100 rounded-pill d-flex align-items-center justify-content-center gap-2"
                         data-bs-dismiss="modal" style="font-weight:600;">
-                        <span class="material-icons">close</span> <span>Tutup</span>
+                        <span class="material-icons">close</span>
+                        <span>Tutup</span>
                     </button>
                 </div>
             </div>
@@ -319,7 +390,7 @@
                     <p>Selamat datang di <strong>Level Sedang</strong>!</p>
                     <p>Jawab soal perkalian sebelum waktu habis. Jangan sampai kehabisan nyawa ya!</p>
                     <ul style="margin-top: 1em;">
-                        <li>📝 Jawab setiap soal sebelum <strong>10 detik</strong>.</li>
+                        <li>📝 Jawab setiap soal sebelum <strong>15 detik</strong> habis.</li>
                         <li>✅ Jawaban benar = lanjut soal berikutnya.</li>
                         <li>❌ Salah atau waktu habis = kehilangan 1 nyawa.</li>
                         <li>❤️ Total nyawa: 3. Jika habis, permainan selesai.</li>
@@ -455,7 +526,8 @@
     <div class="modal fade" id="modalFeedback" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content rounded-4 shadow-lg" style="border:4px solid #ffe082;">
-                <div class="modal-header bg-gradient-info text-white d-flex align-items-center" id="feedbackModalHeader">
+                <div class="modal-header bg-gradient-info text-white d-flex align-items-center"
+                    id="feedbackModalHeader">
                     <span class="material-icons fs-1 me-2" id="feedbackModalIcon">tips_and_updates</span>
                     <h5 class="modal-title flex-grow-1 fw-bold" id="feedbackModalTitle">Penjelasan Cara Hitung</h5>
                     <button class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
@@ -486,7 +558,7 @@
         const JUMLAH_BENAR_TARGET = SOAL_TETAP.length;
         let musikAktif = true;
         let soundAktif = true;
-        let nyawa = 3, waktuSisa = 10, timerInterval;
+        let nyawa = 3, waktuSisa = 15, timerInterval;
         let indexSoal = 0, benarCount = 0, salahCount = 0, bantuanDigunakan = false;
         let bantuanTersisa = 3;
         let a, b, correctAnswer;
@@ -515,8 +587,19 @@
             status.textContent = musikAktif ? "ON" : "OFF";
             status.classList.toggle('off', !musikAktif);
         }
+
+        // Fungsi untuk mengubah musik latar
+        function changeMusic() {
+            const genreSelect = document.getElementById("musicGenre");
+            const selectedMusic = genreSelect.value;
+            const musik = document.getElementById("musikLatar");
+            musik.src = `../asset/sound/${selectedMusic}`;
+            if (musikAktif) {
+                musik.play();
+            }
+        }
         function mulaiTimer() {
-            waktuSisa = 10;
+            waktuSisa = 15;
             document.getElementById("timer").textContent = `⏱️ Waktu: ${waktuSisa} detik`;
             clearInterval(timerInterval);
             timerInterval = setInterval(() => {
@@ -894,9 +977,12 @@
     <audio id="benarSound" src="../asset/sound/soundBenar.mp3"></audio>
     <audio id="salahSound" src="../asset/sound/soundSalah.mp3"></audio>
     <audio id="musikLatar" src="../asset/sound/musik-latar2.mp3" loop></audio>
+    <audio id="musikLatar" src="../asset/sound/musik-latar2.mp3" loop></audio>
+    <audio id="musikLatar" src="../asset/sound/musik-latar3.mp3" loop></audio>
     <audio id="selesaiSound" src="../asset/sound/gameSelesai.wav"></audio>
     <audio id="winSound" src="../asset/sound/sukses.mp3"></audio>
     <audio id="klikSound" src="../asset/sound/mouse-click.wav"></audio>
     <audio id="tickSound" src="../asset/sound/detik.mp3"></audio>
 </body>
+
 </html>
