--- a/html/halaman-utama.html
+++ b/html/halaman-utama.html
@@ -11,6 +11,7 @@
   <link rel="icon" href="../asset/image/kaliku.png" type="image/png" />
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#ffc107" />
+  <meta name="google-site-verification" content="L1qmiRidcr62GTiL-RsxVBKVQI9LIS-Re_tzBR5Yf-g" />
 
   <style>
     html,
