--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="../asset/image/kaliku.png" type="image/png">
+    <meta name="google-site-verification" content="L1qmiRidcr62GTiL-RsxVBKVQI9LIS-Re_tzBR5Yf-g" />
     <style>
         body {
             background-color: #fff8c2;
