--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" href="../asset/image/kaliku.png" type="image/png">
+  <meta name="google-site-verification" content="L1qmiRidcr62GTiL-RsxVBKVQI9LIS-Re_tzBR5Yf-g" />
 
   <style>
     body {
