--- a/html/tentang-perkalian.html
+++ b/html/tentang-perkalian.html
@@ -314,9 +314,9 @@
 
     <!-- Perkalian 1 digit × 2 digit -->
     <div class="materi-section">
-      <div class="section-title">Perkalian Satuan × Puluhan</div>
+      <div class="section-title">Perkalian Bilangan Satuan × Puluhan</div>
       <div class="materi-text">
-        Untuk menghitung perkalian satuan × puluhan misalnya <b>7 × 13</b>, kamu bisa memecah angka tersebut menjadi
+        Untuk menghitung perkalian bilangan satuan × puluhan misalnya <b>7 × 13</b>, kamu bisa memecah angka tersebut menjadi
         puluhan dan satuan, lalu mengalikan masing-masing dengan angka 1 digit.
         <br><br>
         <b>Contoh:</b>
@@ -342,7 +342,7 @@
 
     <!-- Perkalian 2 digit × 2 digit distributif -->
     <div class="materi-section">
-      <div class="section-title">Perkalian Puluhan x Puluhan (Distributif)</div>
+      <div class="section-title">Perkalian Bilangan Puluhan x Puluhan (Distributif)</div>
       <div class="materi-text">
         Untuk menghitung perkalian puluhan × puluhan, misal <b>34 × 12</b>, gunakan teknik uraikan ke puluhan dan
         satuan, lalu kalikan semua kemungkinan, dan jumlahkan hasilnya.
@@ -367,9 +367,9 @@
 
     <!-- Perkalian 2 digit × 1 digit bersusun (dengan visual angka simpan/carry) -->
     <div class="materi-section">
-      <div class="section-title">Perkalian Puluhan x Satuan dengan Metode Bersusun</div>
+      <div class="section-title">Perkalian Bilangan Puluhan x Satuan dengan Metode Bersusun</div>
       <div class="materi-text">
-        Metode bersusun juga digunakan untuk menghitung perkalian puluhan × satuan, dengan langkah-langkah yang mirip
+        Metode bersusun juga digunakan untuk menghitung bilangan perkalian puluhan × satuan, dengan langkah-langkah yang mirip
         seperti pada perkalian puluhan × puluhan.<br><br>
         <b>Contoh: 47 × 6</b>
         <div style="display: flex; justify-content: center; margin:18px 0;">
@@ -449,9 +449,9 @@
 
     <!-- Perkalian 2 digit × 2 digit bersusun -->
     <div class="materi-section">
-      <div class="section-title">Perkalian 2 Digit × 2 Digit dengan Metode Bersusun</div>
+      <div class="section-title">Perkalian puluhan × puluhan dengan Metode Bersusun</div>
       <div class="materi-text">
-        Metode bersusun atau “cara porogapit” adalah cara cepat mengalikan 2 digit × 2 digit dengan menuliskan susunan
+        Metode bersusun atau “cara porogapit” adalah cara cepat mengalikan bilangan puluhan × puluhant dengan menuliskan susunan
         angka secara vertikal.<br><br>
         <b>Contoh: 34 × 12</b><br>
         <div style="display: flex; justify-content: center; margin:18px 0;">
