--- a/html/cara-bermain.html
+++ b/html/cara-bermain.html
@@ -139,7 +139,7 @@
       <li><span class="material-icons">category</span> Pilih level: Mudah, Sedang, atau Sulit.</li>
       <li><span class="material-icons">menu_book</span> Baca petunjuk singkat yang muncul di awal setiap level.</li>
       <li><span class="material-icons">touch_app</span> Jawab soal dengan drag & drop angka jawaban ke kotak jawaban (dropzone).</li>
-      <li><span class="material-icons">timer</span> Setiap soal punya batas waktu 10 detik, perhatikan timer di layar.</li>
+      <li><span class="material-icons">timer</span> Setiap soal punya batas waktu.</li>
       <li><span class="material-icons" style="color:#e53935;">favorite</span> Jawaban salah atau waktu habis mengurangi 1 nyawa.</li>
       <li><span class="material-icons">help</span> Gunakan fitur Bantuan maksimal sesuai level (1x-3x) untuk tambah waktu atau lihat cara hitung.</li>
       <li><span class="material-icons">check_circle</span> Status jumlah benar dan salah ditampilkan di kiri atas layar.</li>
@@ -152,15 +152,15 @@
         <tbody>
           <tr>
             <th><span class="material-icons">eco</span> Mudah</th>
-            <td>1 digit × 1 digit, waktu 10 detik, salah/telat -1 nyawa, total nyawa 3, bantuan 3x per permainan</td>
+            <td>satuan x satuan, waktu 10 detik, salah/telat -1 nyawa, total nyawa 3, bantuan 3x per permainan</td>
           </tr>
           <tr>
             <th><span class="material-icons">star_half</span> Sedang</th>
-            <td>2 digit × 1 digit & 1 digit × 2 digit, waktu 10 detik, salah/telat -1 nyawa, total nyawa 3, bantuan 3x per permainan</td>
+            <td>puluhan x satuan, waktu 15 detik, salah/telat -1 nyawa, total nyawa 3, bantuan 3x per permainan</td>
           </tr>
           <tr>
             <th><span class="material-icons">whatshot</span> Sulit</th>
-            <td>2 digit × 2 digit, waktu 10 detik, salah/telat -1 nyawa, total nyawa 3, bantuan 3x per permainan</td>
+            <td>puluhan x puluhan, waktu 20 detik, salah/telat -1 nyawa, total nyawa 3, bantuan 3x per permainan</td>
           </tr>
         </tbody>
       </table>
